One final commit for deployment, because I fixed the delete button not showing up last night for searched items

--- a/client/production.css
+++ b/client/production.css
@@ -54,6 +54,7 @@ div{
   position: relative;
 }
 
+.deleteButtonSearch,
 .deleteButton{
   position: absolute;
   border: 0px;
